--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ span#msg {
             </div>
         </div>
         <div class="home-image">
-            <img src="/images/1.jpg" alt="img">
+            <img src="1.jpg" alt="img">
         </div>
         <div class="home-sci">
             <a href="https://www.facebook.com/lionelisaac254" target="_blank" rel="noopener" rel="noreferrer"><i class='bx bxl-facebook'></i></a>
@@ -677,7 +677,7 @@ span#msg {
     <section id="about">
     <div class="about-content">
         <div class="left">
-          <img src="/images/2.jpg" alt="Profile Picture" class="profile-pic">
+          <img src="2.jpg" alt="Profile Picture" class="profile-pic">
         </div>
         <div class="right">
           <h1>About Me</h1>
