--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       </div>
     </div>
     <div class="home-img">
-      <img src="/images/1.jpg" alt="Lionel Isaac" />
+      <img src="1.jpg" alt="Lionel Isaac" />
     </div>
   </section>
 
