--- a/index.html
+++ b/index.html
@@ -435,35 +435,24 @@
     <h2 class="section-title">My Creative Portfolio</h2>
     <div class="portfolio-grid">
         <div class="portfolio-item">
-            <img src="/images/graphic.jpg" alt="Graphic Design" />
+            <img src="graphic.jpg" alt="Graphic Design" />
             <h3>Graphic Design</h3>
             <p>Innovative designs for branding, marketing, and personal projects.</p>
             <button class="see-more-button">Explore</button>
         </div>
         <div class="portfolio-item">
-            <img src="/images/web.jpg" alt="Web Development" />
+            <img src="web.jpg" alt="Web Development" />
             <h3>Web Development</h3>
             <p>Building responsive and user-friendly websites tailored to client needs.</p>
             <button class="see-more-button">Explore</button>
         </div>
         <div class="portfolio-item">
-            <img src="/images/Photo.jpg" alt="Photography" />
+            <img src="Photo.jpg" alt="Photography" />
             <h3>Photography</h3>
             <p>Capturing moments through the lens, specializing in portrait and landscape photography.</p>
             <button class="see-more-button">Explore</button>
         </div>
-        <div class="portfolio-item">
-            <img src="/images/digitalart.jpg" alt="Digital Art" />
-            <h3>Digital Art</h3>
-            <p>Creating stunning digital illustrations and concept art for various projects.</p>
-            <button class="see-more-button">Explore</button>
-        </div>
-        <div class="portfolio-item">
-            <img src="/images/videoproduction.jpg" alt="Video Production" />
-            <h3>Video Production</h3>
-            <p>Crafting engaging videos for social media, advertisements, and personal projects.</p>
-            <button class="see-more-button">Explore</button>
-        </div>
+
     </div>
   </section>
 
